--- a/Root/GenText/index.html
+++ b/Root/GenText/index.html
@@ -14,7 +14,7 @@
 <table border="3">
 <tbody>
 <tr>
-<th class="BUTTON"><a href="/" style="text-decoration: none; color: inherit;"><img src="styles\back_button.png"; height="15"> Вернуться назад</th>
+<th class="BUTTON"><a href="/Root" style="text-decoration: none; color: inherit;"><img src="styles\back_button.png"; height="15"> Вернуться назад</th>
 </tr>
 </tbody>
 </table>
