--- a/Root/MyWeb/Memes/memes_pg3.html
+++ b/Root/MyWeb/Memes/memes_pg3.html
@@ -11,8 +11,8 @@
 <tbody>
 <tr>
 <th style="color: #dfdf00;">Главная страница</th>
-<th><a href="/guides.html">Обзоры и гайды</th>
-<th><a href="/about.html">О странице</th>
+<th><a href="/Root/guides.html">Обзоры и гайды</th>
+<th><a href="/Root/about.html">О странице</th>
 </tr>
 </table>
 <h1 style="font-family:Impact; color:white;">Коллекция мемов</h1>
@@ -20,7 +20,7 @@
 <table border="4" bgcolor="black">
 <tbody>
 <tr>
-<th><a href="/"><img src="back_button.png"; height="15"> Вернуться назад</th>
+<th><a href="/Root"><img src="back_button.png"; height="15"> Вернуться назад</th>
 </tr>
 </tbody>
 </table>
