--- a/Root/GenText/styles/index_3.html
+++ b/Root/GenText/styles/index_3.html
@@ -14,7 +14,7 @@
 <table border="3">
 <tbody>
 <tr>
-<th><a href="/"><img src="back_button.png"; height="15"> Вернуться назад</th>
+<th><a href="/Root"><img src="back_button.png"; height="15"> Вернуться назад</th>
 </tr>
 </tbody>
 </table>
