--- a/Root/about.html
+++ b/Root/about.html
@@ -60,7 +60,7 @@
 <p></p>
 <table border="0" width="100%">
 <tr>
-<th>Я сайт создал для того, чтобы самому научиться работать с HTML, и пока я горю желанием учиться и работать с ним и сервер не упадёт вечным компьютерным сном, он будет развиваться и пополняться новыми фишками. В настоящее время, сайт доступен только по IP-адресу. <br>Если у вас есть идеи для развития данного сайта, предлагайте их в группе в Telegram с постами или в странице ВК <i>(не рекомендую. Скоро заменю на другую соц. сеть)</i>. <br>Или напишите на почту: <a href="mailto:dqwdqddfcvsdvs224@gmail.com">dqwdqddfcvsdvs224@gmail.com</a>. <p></p>Сайт работает на GitHub.</th>
+<th>Я сайт создал для того, чтобы самому научиться работать с HTML, и пока я горю желанием учиться и работать с ним и сервер не упадёт вечным компьютерным сном, он будет развиваться и пополняться новыми фишками. В настоящее время, сайт доступен для всех желающих <i>(наконец-то!)</i>. <br>Если у вас есть идеи для развития данного сайта, предлагайте их в группе в Telegram с постами или в странице ВК <i>(не рекомендую. Скоро заменю на другую соц. сеть)</i>. <br>Или напишите на почту: <a href="mailto:dqwdqddfcvsdvs224@gmail.com">dqwdqddfcvsdvs224@gmail.com</a>. <p></p>Сайт работает на GitHub.</th>
 </tr>
 </table>
 </td>
