--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 <img src="btn\a112.gif" alt="Сайт, баннер и иконки сделаны живым человеком. Никакого ИИ, только живой интеллект" title="Сайт, баннер и иконки сделаны живым человеком. Никакого ИИ, только живой интеллект">
 <img src="btn\mikuapp.gif">
 <a target="_blank" rel="noopener noreferrer" href="https://discord.gg/XByQAeks4T">
-<img src="btn\discord_now.gif" alt="Присоединяйтесь на Discord-сервер! (пока тестовый)" title="Присоединяйтесь на Discord-сервер! (пока тестовый)"></a>
+<img src="btn\discord_now.gif" alt="Присоединяйтесь на мой Discord-сервер! (пока тестовый)" title="Присоединяйтесь на мой Discord-сервер! (пока тестовый)"></a>
 </th>
 </tr>
 </table>
