--- a/MyWeb/Links/index.html
+++ b/MyWeb/Links/index.html
@@ -68,15 +68,15 @@
 <table border="1" width="100%">
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\firefox32.png"; width="16" height="16"><a href="https://www.mozilla.org/ru/firefox/enterprise/" style="text-decoration: none; color: gray;"> Mozilla Firefox <i>(оффлайн-установщики на ваш вкус)</i></a></th>
-<th>Известный браузер на собственном движке (SpiderMonkey/Gecko), а не на движке Chromium, на котором сейчас работают браузеры Google Chrome, Microsoft Edge, мусорные Opera, Opera GX, Яндекс Браузер и т.д. Также имеется возможность кастомизации внешнего вида браузера.</th>
+<th>Известный браузер, работающий на собственном движке (SpiderMonkey/Gecko). Выпущен в 2002 году разработчиком Mozilla и обновляется по сей день. Имеется возможность использования расширений на Manifest V2. Также имеется возможность кастомизации внешнего вида браузера.</th>
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\chrome.png"; width="16" height="16"><a href="https://www.google.com/intl/ru/chrome/?standalone=1" style="text-decoration: none; color: gray;"> Google Chrome <i>(оффлайн-установщик)</i></a></th>
-<th>Самый популярный и удобный в синхронизации аккаунтов браузер на движке Chromium. Не рекомендуется его скачивать и устанавливать на свой компьютер, если нет расширений, совместимых с Manifest V3.</th>
+<th>Самый популярный и удобный в синхронизации аккаунтов браузер на движке Chromium. Выпущен в 2008 году компанией Google. Не рекомендуется его скачивать и устанавливать на свой компьютер, если нет расширений, совместимых с Manifest V3.</th>
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\chromium.png"; width="16" height="16"><a href="https://www.chromium.org/getting-involved/download-chromium/" style="text-decoration: none; color: gray;"> Chromium</a> <p></p><img src="img\chromium.png"; width="16" height="16"><a href="https://download-chromium.appspot.com/" style="text-decoration: none; color: gray;"> Chromium <br><i style="font-size: 9">(если вы каким-то чёртом не нашли сайт с загрузкой собранного браузера)</i></a></th>
-<th>Веб-браузер с открытым исходным кодом, разрабатываемый The Chromium Authors. Не рекомендуется его скачивать и устанавливать на свой компьютер, если нет расширений, совместимых с Manifest V3.</th>
+<th>Веб-браузер с открытым исходным кодом и экспериментальными функциями, разрабатываемый The Chromium Authors. Не рекомендуется его скачивать и устанавливать на свой компьютер, если нет расширений, совместимых с Manifest V3.</th>
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\tor.png"; width="16" height="16"><a href="https://www.torproject.org/download" style="text-decoration: none; color: gray;"> Tor Browser (нужен VPN)</a></th>
