--- a/MyWeb/Links/index.html
+++ b/MyWeb/Links/index.html
@@ -57,7 +57,7 @@
 </table>
 <center>
 <h1>Ссылки</h1>
-<h2>Ссылки на полезное ПО. Данный раздел не несёт в себе ссылки на вредоносное ПО (по крайней мере, не должен нести).</h2>
+<h2>Ссылки на полезное ПО. Данный раздел не несёт в себе ссылок на вредоносное ПО (по крайней мере, не должен нести).</h2>
 </center>
 <table border="0" width="100%">
 <tr>
