--- a/MyWeb/Links/index.html
+++ b/MyWeb/Links/index.html
@@ -80,7 +80,7 @@
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\tor.png"; width="16" height="16"><a href="https://www.torproject.org/download" style="text-decoration: none; color: gray;"> Tor Browser (нужен VPN)</a></th>
-<th>Бесплатный браузер на движке от Mozilla Firefox, позволяющий установить анонимное сетевое соединение в Интернете <i>(Интернет не анонимен! - Тыквенная семечка)</i>. <br>Не рекомендуется его использовать для обхода блокировок часто используемых сервисов, такие как YouTube и Discord.</th>
+<th>Бесплатный браузер на движке от Mozilla Firefox, позволяющий устанавливать анонимное сетевое соединение в Интернете <i>(Интернет не анонимен! - Тыквенная семечка)</i>. <br>Не рекомендуется его использовать для обхода блокировок часто используемых сервисов, такие как YouTube и Discord.</th>
 </tr>
 </table>
 <p></p>
@@ -101,7 +101,7 @@
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\foobar2k.png"; width="16" height="16"><a href="https://www.foobar2000.org/" style="text-decoration: none; color: gray;"> foobar2000</a></th>
-<th>Бесплатный аудиоплеер на Windows и macOS. Поддерживает популярные и не очень аудиоформаты (даже трекерную музыку!). Имеет много плагинов для работы и комфортного прослушивания музыки в различных форматах.</th>
+<th>Бесплатный аудиоплеер на Windows и macOS. Поддерживает популярные и не очень аудиоформаты (даже трекерную музыку!). Имеет много плагинов для работы плеера и комфортного прослушивания музыки в различных форматах.</th>
 </tr>
 </table>
 <p></p>
@@ -147,8 +147,8 @@
 <th>Бесплатный и открытый архиватор, доступный на Windows (GUI/консоль), macOS (консольная версия) и Linux (консольная версия).</th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\wrar.png"; width="16" height="16"><a href="https://www.rarlab.com/download.htm" style="text-decoration: none; color: gray;"> WinRAR/RAR ($$$)</a></th>
-<th>Условно-бесплатный архиватор на Windows (GUI/консоль), macOS (консольная версия) и Linux (консольная версия). Если вас раздражают всплывающие окна с предложением купить программу (GUI), лучше данный архиватор не качать на свой компьютер.</th>
+<th class="TITLE" style="width: 160px;"><img src="img\wrar.png"; width="16" height="16"><a href="https://www.rarlab.com/download.htm" style="text-decoration: none; color: gray;"> WinRAR/RAR <br>($$$)</a></th>
+<th>Условно-бесплатный архиватор на Windows (GUI/консоль), macOS (консольная версия) и Linux (консольная версия). Если вас раздражают всплывающие окна с предложением купить программу (GUI), лучше данный архиватор не ставить на свой компьютер.</th>
 </tr>
 </table>
 <p></p>
@@ -182,7 +182,7 @@
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\v2rayN.png"; width="16" height="16"><a href="https://github.com/2dust/v2rayN" style="text-decoration: none; color: gray;"> v2rayN</a></th>
-<th>Клиент, который позволяет без задержек обходить блокировки сервисов с использованием VLESS-, VMess-, Trojan-, WireGuard- и Socks-конфигураций. Для работы использует тип ядер Xray или sing-box. Имеет присеты для Китая, России и Ирана. <br>Требуется ваш созданный VPN и 3x-ui/Marzban для создания собственной конфигурации.</th>
+<th>Клиент, который позволяет обходить блокировки сервисов с использованием VLESS-, VMess-, Trojan-, WireGuard- и Socks-конфигураций. Для работы использует тип ядер Xray или sing-box. Имеет присеты для Китая, России и Ирана. <br>Требуется ваш созданный VPN и 3x-ui/Marzban для создания собственной конфигурации.</th>
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\amnezia.png"; width="16" height="16"><a href="https://github.com/amnezia-vpn/amnezia-client/releases" style="text-decoration: none; color: gray;"> Amnezia VPN</a></th>
