--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 <th class="BUTTON" onclick="window.location.href='guides.html';" style="cursor: pointer;"><a href="guides.html" style="text-decoration: none; color: inherit;">Руководства</th>
 </tr>
 <tr>
-<th style="color: #bababa; background-color: #121212;">О сайте</th>
+<th style="color: #bababa; background-color: #121212">О сайте</th>
 </tr>
 <tr>
 </tr>
