--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <tr>
 <td class="MAIN" width="237" style="padding-right: 4px;">
 <table border="1" width="237" style="border: 1px solid black;">
-<th style="color: #bababa; background-color: #121212;">Главная страница</th>
+<th style="color: #bababa; background-color: #121212">Главная страница</th>
 </tr>
 <tr>
 <th class="BUTTON" onclick="window.location.href='reviews.html';" style="cursor: pointer;"><a href="reviews.html" style="text-decoration: none; color: inherit;">Обзоры</th>
