--- a/guides.html
+++ b/guides.html
@@ -18,16 +18,16 @@
 <tr>
 <td class="MAIN" width="237" style="padding-right: 4px;">
 <table border="1" width="237" style="border: 1px solid black;">
-<th class="BUTTON" onclick="window.location.href='/index.html';" style="cursor: pointer;"><a href="/index.html" style="text-decoration: none; color: inherit;">Главная страница</th>
+<th class="BUTTON" onclick="window.location.href='index.html';" style="cursor: pointer;"><a href="index.html" style="text-decoration: none; color: inherit;">Главная страница</th>
 </tr>
 <tr>
-<th class="BUTTON" onclick="window.location.href='/reviews.html';" style="cursor: pointer;"><a href="/reviews.html" style="text-decoration: none; color: inherit;">Обзоры</th>
+<th class="BUTTON" onclick="window.location.href='reviews.html';" style="cursor: pointer;"><a href="reviews.html" style="text-decoration: none; color: inherit;">Обзоры</th>
 </tr>
 <tr>
 <th style="color: #bababa; background-color: #121212;">Руководства</th>
 </tr>
 <tr>
-<th class="BUTTON" onclick="window.location.href='/about.html';" style="cursor: pointer;"><a href="/about.html" style="text-decoration: none; color: inherit;">О сайте</th>
+<th class="BUTTON" onclick="window.location.href='about.html';" style="cursor: pointer;"><a href="about.html" style="text-decoration: none; color: inherit;">О сайте</th>
 </tr>
 <tr>
 </tr>
@@ -54,10 +54,7 @@
 </center>
 <table border="0" width="100%">
 <tr>
-<th><img src="guidimg\samba.png"; height="100"></th>
-</tr>
-<tr>
-<th><a href="Guides\samba\samba.html">Как правильно настроить Samba в ред ос в консольной графике?</th>
+<th>В настоящее время никаких руководств нет.</th>
 </tr>
 </table>
 </td>
