--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 <table border="0" width="100%" style="text-align: left;">
 <tr>
 <th width="220" style="text-align: center; font-size:11; color:gray;"><img src="img\6287a440c0d31641074598cd40d02354.jpg" width="200" alt="Аватар (на фотографии я, да)" title="Аватар (на фотографии я, да)"><p></p>Аватар <br><i>(на фотографии я, да)</i></th>
-<th>Имя: Роман <br>Возраст: 19 лет <br>ДР: 02.01.2006 <br>Пол: ламинат (мужской) <br>Хобби: коллекционирование компьютеров, антикварного ПО, играть в игры, делать мемы, щитпосты, фотожабить в PhotoShop</th>
+<th>Имя: Роман <br>Возраст: 19 лет <br>ДР: 02.01.2006 <br>Пол: ламинат (мужской) <br>Хобби: коллекционирование компьютеров, антикварного ПО, играть в специфические игры на ПК/консолях, делать мемы, щитпосты, фотожабить в PhotoShop</th>
 </tr>
 </table>
 <p></p>
