--- a/MyWeb/Links/index.html
+++ b/MyWeb/Links/index.html
@@ -72,15 +72,15 @@
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\chrome.png"; width="16" height="16"><a href="https://www.google.com/intl/ru/chrome/?standalone=1" style="text-decoration: none; color: gray;"> Google Chrome <i>(оффлайн-установщик)</i></a></th>
-<th>Самый популярный и удобный в синхронизации аккаунтов браузер на движке Chromium. Выпущен в 2008 году компанией Google. Не рекомендуется его скачивать и устанавливать на свой компьютер, если нет расширений, совместимых с Manifest V3.</th>
+<th>Самый популярный и удобный в синхронизации аккаунтов браузер на движке Chromium. Выпущен в 2008 году компанией Google. Не рекомендуется его скачивать и устанавливать на свой компьютер, если хотите использовать расширения, несовместимые с Manifest V3.</th>
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\chromium.png"; width="16" height="16"><a href="https://www.chromium.org/getting-involved/download-chromium/" style="text-decoration: none; color: gray;"> Chromium</a> <p></p><img src="img\chromium.png"; width="16" height="16"><a href="https://download-chromium.appspot.com/" style="text-decoration: none; color: gray;"> Chromium <br><i style="font-size: 9">(если вы каким-то чёртом не нашли сайт с загрузкой собранного браузера)</i></a></th>
-<th>Веб-браузер с открытым исходным кодом и экспериментальными функциями, разрабатываемый The Chromium Authors. Не рекомендуется его скачивать и устанавливать на свой компьютер, если нет расширений, совместимых с Manifest V3.</th>
+<th>Веб-браузер с открытым исходным кодом и экспериментальными функциями, разрабатываемый The Chromium Authors. Не рекомендуется его скачивать и устанавливать на свой компьютер, если хотите использовать расширения, несовместимые с Manifest V3.</th>
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\tor.png"; width="16" height="16"><a href="https://www.torproject.org/download" style="text-decoration: none; color: gray;"> Tor Browser (нужен VPN)</a></th>
-<th>Бесплатный браузер на движке от Mozilla Firefox, позволяющий устанавливать анонимное сетевое соединение в Интернете <i>(Интернет не анонимен! - Тыквенная семечка)</i>. <br>Не рекомендуется его использовать для обхода блокировок часто используемых сервисов, такие как YouTube и Discord.</th>
+<th>Бесплатный браузер на движке от Mozilla Firefox, позволяющий устанавливать анонимное сетевое соединение в Интернете как с обычными сайтами, так и .onion-домены <i>(Интернет не анонимен! - Тыквенная семечка)</i>. <br>Не рекомендуется его использовать для обхода блокировок часто используемых сервисов, такие как YouTube и Discord.</th>
 </tr>
 </table>
 <p></p>
@@ -120,7 +120,7 @@
 <p></p>
 <table border="0" width="100%">
 <tr>
-<th class="TITLE">Программы для записи видео</th>
+<th class="TITLE">Программы для записи видео и трансляций</th>
 </tr>
 </table>
 <p></p>
