--- a/MyWeb/Links/index.html
+++ b/MyWeb/Links/index.html
@@ -67,19 +67,19 @@
 <p></p>
 <table border="1" width="100%">
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\firefox32.png"; width="16" height="16"><a href="https://www.mozilla.org/ru/firefox/enterprise/" style="text-decoration: none; color: gray;"> Mozilla Firefox <i>(оффлайн-установщики на ваш вкус)</i></a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\firefox32.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.mozilla.org/ru/firefox/enterprise/" style="text-decoration: none; color: gray;"> Mozilla Firefox <i>(оффлайн-установщики на ваш вкус)</i></a></th>
 <th>Известный браузер, работающий на собственном движке (SpiderMonkey/Gecko). Выпущен в 2002 году разработчиком Mozilla и обновляется по сей день. Имеется возможность использования расширений на Manifest V2. Также имеется возможность кастомизации внешнего вида браузера.</th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\chrome.png"; width="16" height="16"><a href="https://www.google.com/intl/ru/chrome/?standalone=1" style="text-decoration: none; color: gray;"> Google Chrome <i>(оффлайн-установщик)</i></a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\chrome.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.google.com/intl/ru/chrome/?standalone=1" style="text-decoration: none; color: gray;"> Google Chrome <i>(оффлайн-установщик)</i></a></th>
 <th>Самый популярный и удобный в синхронизации аккаунтов браузер на движке Chromium. Выпущен в 2008 году компанией Google. Не рекомендуется его скачивать и устанавливать на свой компьютер, если хотите использовать расширения, несовместимые с Manifest V3.</th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\chromium.png"; width="16" height="16"><a href="https://www.chromium.org/getting-involved/download-chromium/" style="text-decoration: none; color: gray;"> Chromium</a> <p></p><img src="img\chromium.png"; width="16" height="16"><a href="https://download-chromium.appspot.com/" style="text-decoration: none; color: gray;"> Chromium <br><i style="font-size: 9">(если вы каким-то чёртом не нашли сайт с загрузкой собранного браузера)</i></a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\chromium.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.chromium.org/getting-involved/download-chromium/" style="text-decoration: none; color: gray;"> Chromium</a> <p></p><img src="img\chromium.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://download-chromium.appspot.com/" style="text-decoration: none; color: gray;"> Chromium <br><i style="font-size: 9">(если вы каким-то чёртом не нашли сайт с загрузкой собранного браузера)</i></a></th>
 <th>Веб-браузер с открытым исходным кодом и экспериментальными функциями, разрабатываемый The Chromium Authors. Не рекомендуется его скачивать и устанавливать на свой компьютер, если хотите использовать расширения, несовместимые с Manifest V3.</th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\tor.png"; width="16" height="16"><a href="https://www.torproject.org/download" style="text-decoration: none; color: gray;"> Tor Browser (нужен VPN)</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\tor.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.torproject.org/download" style="text-decoration: none; color: gray;"> Tor Browser (нужен VPN)</a></th>
 <th>Бесплатный браузер на движке от Mozilla Firefox, позволяющий устанавливать анонимное сетевое соединение в Интернете как с обычными сайтами, так и .onion-домены <i>(Интернет не анонимен! - Тыквенная семечка)</i>. <br>Не рекомендуется его использовать для обхода блокировок часто используемых сервисов, такие как YouTube и Discord.</th>
 </tr>
 </table>
@@ -92,15 +92,15 @@
 <p></p>
 <table border="1" width="100%">
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\mpc.png"; width="16" height="16"><a href="https://github.com/clsid2/mpc-hc/releases" style="text-decoration: none; color: gray;"> MPC-HC (clsid2)</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\mpc.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/clsid2/mpc-hc/releases" style="text-decoration: none; color: gray;"> MPC-HC (clsid2)</a></th>
 <th>Простой, открытый, доступный на Windows, интуитивно понятный медиаплеер, без всяких излишеств. Поддерживает все популярные аудио и видеоформаты. Также поддерживает открытие видео по ссылке (например, видео на YouTube с yt-dlp и VC++ 2010 x86). Умеет в HDR с MPCVR/madVR.</th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\vlc.png"; width="16" height="16"><a href="https://www.videolan.org/vlc/" style="text-decoration: none; color: gray;"> VLC</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\vlc.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.videolan.org/vlc/" style="text-decoration: none; color: gray;"> VLC</a></th>
 <th>Ещё один простой, открытый, интуитивно понятный медиаплеер. Также поддерживает все популярные аудио и видеоформаты. Доступен на Windows, Linux, macOS и на мобильных ОС.</th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\foobar2k.png"; width="16" height="16"><a href="https://www.foobar2000.org/" style="text-decoration: none; color: gray;"> foobar2000</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\foobar2k.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.foobar2000.org/" style="text-decoration: none; color: gray;"> foobar2000</a></th>
 <th>Бесплатный аудиоплеер на Windows и macOS. Поддерживает популярные и не очень аудиоформаты (даже трекерную музыку!). Имеет много плагинов для работы плеера и комфортного прослушивания музыки в различных форматах.</th>
 </tr>
 </table>
@@ -113,7 +113,7 @@
 <p></p>
 <table border="1" width="100%">
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\qb.png"; width="16" height="16"><a href="https://www.qbittorrent.org/download" style="text-decoration: none; color: gray;"> qBittorrent</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\qb.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.qbittorrent.org/download" style="text-decoration: none; color: gray;"> qBittorrent</a></th>
 <th>Бесплатный и открытый торрент-клиент без рекламы и вирусов, в отличие от uTorrent, MediaGet и их подобных.</th>
 </tr>
 </table>
@@ -126,11 +126,11 @@
 <p></p>
 <table border="1" width="100%">
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\obs.png"; width="16" height="16"><a href="https://www.obsproject.com/" style="text-decoration: none; color: gray;"> OBS (Open Broadcaster Software)</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\obs.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.obsproject.com/" style="text-decoration: none; color: gray;"> OBS (Open Broadcaster Software)</a></th>
 <th>Бесплатная и открытая программа для записи видео и потокового вещания. Поддерживает плагины для стримов и не только.</th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\strlabs.png"; width="16" height="16"><a href="https://www.streamlabs.com/" style="text-decoration: none; color: gray;"> Streamlabs Desktop</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\strlabs.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.streamlabs.com/" style="text-decoration: none; color: gray;"> Streamlabs Desktop</a></th>
 <th>Более простая в настройке программа, форк OBS. Доступна на Windows и macOS. Как и OBS, поддерживает плагины.</th>
 </tr>
 </table>
@@ -143,11 +143,11 @@
 <p></p>
 <table border="1" width="100%">
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\7z.png"; width="16" height="16"><a href="https://www.7-zip.org/download.html" style="text-decoration: none; color: gray;"> 7-Zip</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\7z.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.7-zip.org/download.html" style="text-decoration: none; color: gray;"> 7-Zip</a></th>
 <th>Бесплатный и открытый архиватор, доступный на Windows (GUI/консоль), macOS (консольная версия) и Linux (консольная версия).</th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\wrar.png"; width="16" height="16"><a href="https://www.rarlab.com/download.htm" style="text-decoration: none; color: gray;"> WinRAR/RAR <br>($$$)</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\wrar.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.rarlab.com/download.htm" style="text-decoration: none; color: gray;"> WinRAR/RAR <br>($$$)</a></th>
 <th>Условно-бесплатный архиватор на Windows (GUI/консоль), macOS (консольная версия) и Linux (консольная версия). Если вас раздражают всплывающие окна с предложением купить программу (GUI), лучше данный архиватор не ставить на свой компьютер.</th>
 </tr>
 </table>
@@ -160,11 +160,11 @@
 <p></p>
 <table border="1" width="100%">
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\vmw.png"; width="16" height="16"><a href="https://web.archive.org/web/20250228202814/https://softwareupdate.vmware.com/cds/vmw-desktop/ws/17.6.2/24409262/windows/core/VMware-workstation-17.6.2-24409262.exe.tar" style="text-decoration: none; color: gray;"> VMware Workstation 17.6.2 (Windows)</a> <p></p><img src="img\vmw.png"; width="16" height="16"><a href="https://web.archive.org/web/20241218124711/https://softwareupdate.vmware.com/cds/vmw-desktop/ws/17.6.2/24409262/linux/core/VMware-Workstation-17.6.2-24409262.x86_64.bundle.tar" style="text-decoration: none; color: gray;"> VMware Workstation 17.6.2 (Linux)</a> <p></p><img src="img\vmfus.png"; width="16" height="16"> <i>VMware Fusion (macOS) (ссылка недоступна)</i></th>
-<th>Платное (ныне бесплатное для персонального использования) и проприетарное ПО виртуализации для Windows и Linux. Работает стабильнее и поддерживает больше гостевых ОС, чем VirtualBox.<p></p><a href="https://web.archive.org/web/20250301202605/https://softwareupdate.vmware.com/cds/vmw-desktop/ws/17.6.2/24409262/windows/packages/tools-windows.tar" style="text-decoration: none; color: gray;"> VMware Tools (Windows)</a> | <a href="https://web.archive.org/web/20250301202605/https://softwareupdate.vmware.com/cds/vmw-desktop/ws/17.6.2/24409262/windows/packages/tools-windows-x86.tar" style="text-decoration: none; color: gray;"> VMware Tools (Windows, x86)</a> | <a href="https://web.archive.org/web/20241218115725/https://softwareupdate.vmware.com/cds/vmw-desktop/ws/17.6.2/24409262/linux/packages/vmware-tools-windows-12.4.5-23787635.x86_64.component.tar" style="text-decoration: none; color: gray;"> VMware Tools (компонент для Linux)</a> | <a href="https://web.archive.org/web/20241218115725/https://softwareupdate.vmware.com/cds/vmw-desktop/ws/17.6.2/24409262/linux/packages/vmware-tools-windows-x86-12.4.5-23787635.x86_64.component.tar" style="text-decoration: none; color: gray;"> VMware Tools (компонент для Linux, x86)</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\vmw.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://web.archive.org/web/20250228202814/https://softwareupdate.vmware.com/cds/vmw-desktop/ws/17.6.2/24409262/windows/core/VMware-workstation-17.6.2-24409262.exe.tar" style="text-decoration: none; color: gray;"> VMware Workstation 17.6.2 (Windows)</a> <p></p><img src="img\vmw.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://web.archive.org/web/20241218124711/https://softwareupdate.vmware.com/cds/vmw-desktop/ws/17.6.2/24409262/linux/core/VMware-Workstation-17.6.2-24409262.x86_64.bundle.tar" style="text-decoration: none; color: gray;"> VMware Workstation 17.6.2 (Linux)</a> <p></p><img src="img\vmfus.png"; width="16" height="16"> <i>VMware Fusion (macOS) (ссылка недоступна)</i></th>
+<th>Платное (ныне бесплатное для персонального использования) и проприетарное ПО виртуализации для Windows и Linux. Работает стабильнее и поддерживает больше гостевых ОС, чем VirtualBox.<p></p><a target="_blank" rel="noopener noreferrer" href="https://web.archive.org/web/20250301202605/https://softwareupdate.vmware.com/cds/vmw-desktop/ws/17.6.2/24409262/windows/packages/tools-windows.tar" style="text-decoration: none; color: gray;"> VMware Tools (Windows)</a> | <a target="_blank" rel="noopener noreferrer" href="https://web.archive.org/web/20250301202605/https://softwareupdate.vmware.com/cds/vmw-desktop/ws/17.6.2/24409262/windows/packages/tools-windows-x86.tar" style="text-decoration: none; color: gray;"> VMware Tools (Windows, x86)</a> | <a target="_blank" rel="noopener noreferrer" href="https://web.archive.org/web/20241218115725/https://softwareupdate.vmware.com/cds/vmw-desktop/ws/17.6.2/24409262/linux/packages/vmware-tools-windows-12.4.5-23787635.x86_64.component.tar" style="text-decoration: none; color: gray;"> VMware Tools (компонент для Linux)</a> | <a target="_blank" rel="noopener noreferrer" href="https://web.archive.org/web/20241218115725/https://softwareupdate.vmware.com/cds/vmw-desktop/ws/17.6.2/24409262/linux/packages/vmware-tools-windows-x86-12.4.5-23787635.x86_64.component.tar" style="text-decoration: none; color: gray;"> VMware Tools (компонент для Linux, x86)</a></th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\vbox.png"; width="16"><a href="https://www.virtualbox.org/wiki/Downloads" style="text-decoration: none; color: gray;"> Oracle VirtualBox</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\vbox.png"; width="16"><a target="_blank" rel="noopener noreferrer" href="https://www.virtualbox.org/wiki/Downloads" style="text-decoration: none; color: gray;"> Oracle VirtualBox</a></th>
 <th>Бесплатное ПО виртуализации для Windows, macOS, Linux и Solaris, но менее стабильно, чем VMware Workstation.</th>
 </tr>
 </table>
@@ -177,15 +177,15 @@
 <p></p>
 <table border="1" width="100%">
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\zapr.png"; width="16" height="16"><a href="https://github.com/bol-van/zapret" style="text-decoration: none; color: gray;"> zapret (bol-van)</a> <p></p><a href="https://github.com/Flowseal/zapret-discord-youtube" style="text-decoration: none; color: gray;"> zapret (Flowseal)</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\zapr.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/bol-van/zapret" style="text-decoration: none; color: gray;"> zapret (bol-van)</a> <p></p><a target="_blank" rel="noopener noreferrer" href="https://github.com/Flowseal/zapret-discord-youtube" style="text-decoration: none; color: gray;"> zapret (Flowseal)</a></th>
 <th>Одна из надёжных и открытых программ для обхода блокировок без использования VPN. Доступна на Windows и Linux (только от bol-van). Не обходит заблокированные не от ркн IP-адреса. <br>На данный момент не работает с macOS. Если у кого-то zapret с macOS работает, дайте знать.</th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\v2rayN.png"; width="16" height="16"><a href="https://github.com/2dust/v2rayN" style="text-decoration: none; color: gray;"> v2rayN</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\v2rayN.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/2dust/v2rayN" style="text-decoration: none; color: gray;"> v2rayN</a></th>
 <th>Клиент, который позволяет обходить блокировки сервисов с использованием VLESS-, VMess-, Trojan-, WireGuard- и Socks-конфигураций. Для работы использует тип ядер Xray или sing-box. Имеет присеты для Китая, России и Ирана. <br>Требуется ваш созданный VPN и 3x-ui/Marzban для создания собственной конфигурации.</th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\amnezia.png"; width="16" height="16"><a href="https://github.com/amnezia-vpn/amnezia-client/releases" style="text-decoration: none; color: gray;"> Amnezia VPN</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\amnezia.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/amnezia-vpn/amnezia-client/releases" style="text-decoration: none; color: gray;"> Amnezia VPN</a></th>
 <th>Открытый клиент для создания собственного сервера с VPN. Доступен на декстопные и мобильные ОС.</th>
 </tr>
 </table>
