--- a/MyWeb/Links/index.html
+++ b/MyWeb/Links/index.html
@@ -57,7 +57,7 @@
 </table>
 <center>
 <h1>Ссылки</h1>
-<h2>Ссылки на полезное ПО. Данный раздел не несёт в себе ссылок на вредоносное ПО (по крайней мере, не должен нести).</h2>
+<h2>Ссылки на полезное ПО и не только. Данный раздел не несёт в себе ссылок на вредоносы (по крайней мере, не должен нести).</h2>
 </center>
 <table border="0" width="100%">
 <tr>
@@ -80,7 +80,7 @@
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\tor.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.torproject.org/download" style="text-decoration: none; color: gray;"> Tor Browser (нужен VPN)</a></th>
-<th>Бесплатный браузер на движке от Mozilla Firefox, позволяющий устанавливать анонимное сетевое соединение в Интернете как с обычными сайтами, так и .onion-домены <i>(Интернет не анонимен! - Тыквенная семечка)</i>. <br>Не рекомендуется его использовать для обхода блокировок часто используемых сервисов, такие как YouTube и Discord.</th>
+<th>Бесплатный браузер на движке от Mozilla Firefox. Устанавливает анонимное сетевое соединение в Интернете по мостам как с обычными сайтами, так и .onion-домены <i>(Интернет не анонимен! - Тыквенная семечка)</i>. <br>Не рекомендуется его использовать для обхода блокировок часто используемых сервисов, такие как YouTube и Discord.</th>
 </tr>
 </table>
 <p></p>
@@ -187,6 +187,27 @@
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\amnezia.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/amnezia-vpn/amnezia-client/releases" style="text-decoration: none; color: gray;"> Amnezia VPN</a></th>
 <th>Открытый клиент для создания собственного сервера с VPN. Доступен на декстопные и мобильные ОС.</th>
+</tr>
+</table>
+<p></p>
+<table border="0" width="100%">
+<tr>
+<th class="TITLE">Дистрибутивы Linux</th>
+</tr>
+</table>
+<p></p>
+<table border="1" width="100%">
+<tr>
+<th class="TITLE" style="width: 160px;"><img src="img\debian.png"; width="16" height="19"><a target="_blank" rel="noopener noreferrer" href="https://www.debian.org/" style="text-decoration: none; color: gray;"> Debian</a>
+<th>Один из самых важных дистрибутивов Linux. Имеет наибольшее хранилище пакетов среди всех дистрибутивов. На нём основаны популярные дистрибутивы, такие как Ubuntu, Linux Mint/LMDE, antiX, Kali Linux и др.</th>
+</tr>
+<tr>
+<th class="TITLE" style="width: 160px;"><img src="img\lm.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://linuxmint.com/download.php" style="text-decoration: none; color: gray;"> Linux Mint</a><p></p><img src="img\lm.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://linuxmint.com/download_lmde.php" style="text-decoration: none; color: gray;"> LMDE</a></th>
+<th>Бесплатный и рекомендуемый для новичков дистрибутив Linux, основанный на Ubuntu (Linux Mint) и Debian (LMDE).</th>
+</tr>
+<tr>
+<th class="TITLE" style="width: 160px;"><img src="img\xub.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://xubuntu.org/" style="text-decoration: none; color: gray;"> Xubuntu</a></th>
+<th>Дистрибутив, основанный на Ubuntu. Использует в качестве по умолчанию окружение рабочего стола XFCE. Как альтернатива обычному Ubuntu, использующий неудобный по функционалу GNOME, рекомендую к использованию.</th>
 </tr>
 </table>
 </td>
