--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 <th><a href="MyWeb\Memes\memes.html">Коллекция мемов</th>
 </tr>
 <tr>
-<th class="CONTENT">Раздел с ссылками на загрузку полезного (или для прикола) ПО, архивов и файлов. <p><img src="img\new5.gif" title="НОВОЕ!"></p></th>
-<th class="CONTENT">Этот раздел (ранее - HTML-страница) был создан в мае 2024 года от нечего делать. <br>Вдохновившись сайтами эстетик-шрифтов и переводами кодировок, я решил создать что-то типа своего сайта, где буквы заменяются похожими символами, тем самым создавая из этого "сломанный" текст. <br>Ну и эта страница была создана для того, чтобы не заходить в "Таблицу символов"  для подбора нужных символов. <i>(англ.)</i> <br>Не поддерживает Internet Explorer!</th>
-<th class="CONTENT">Раздел с моими сохранёнными мемами (я их благополучно украл). Здесь ещё будут мои мемо-фотожабы. <p><img src="img\uc.gif" style="width:64px;height:20px" title="Переделывается..."></p></th>
+<th class="CONTENT">Раздел с ссылками на полезное ПО, сайты, дистрибутивы Linux и т.д. <p><img src="img\new5.gif" title="НОВОЕ!"></p></th>
+<th class="CONTENT">Этот раздел (ранее - просто HTML-страница) был создан в мае 2024 года от нечего делать. <br>Вдохновившись сайтами эстетик-шрифтов и переводами кодировок, я решил создать что-то типа своего сайта, где буквы заменяются похожими символами, тем самым создавая из этого "сломанный" текст. <br>Ну и эта страница была создана для того, чтобы не заходить в "Таблицу символов"  для подбора нужных символов. <i>(англ.)</i>
+<th class="CONTENT">Раздел с моими сохранёнными мемами (я их благополучно украл). Здесь ещё находятся мои мемо-фотожабы. <p><img src="img\uc.gif" style="width:64px;height:20px" title="Переделывается..."></p></th>
 </tr>
 </table>
 </td>
