--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 <img src="btn\wru.png">
 <img src="btn\a1.gif" alt="Мобильной версии сайта не существует" title="Мобильной версии сайта не существует">
 <img src="btn\a58.gif">
-<img src="btn\a112.gif" alt="Сайт, баннер и иконки сделаны живым человеком. Никакого ИИ, только живой интеллект" title="Сайт, баннер и иконки сделаны живым человеком. Никакого ИИ, только естественный интеллект">
+<img src="btn\a112.gif" alt="Сайт, баннер и иконки сделаны живым человеком. Никакого ИИ, только естественный интеллект" title="Сайт, баннер и иконки сделаны живым человеком. Никакого ИИ, только естественный интеллект">
 <img src="btn\mikuapp.gif">
 <a target="_blank" rel="noopener noreferrer" href="https://discord.gg/XByQAeks4T">
 <img src="btn\discord_now.gif" alt="Присоединяйтесь на мой Discord-сервер! (пока тестовый)" title="Присоединяйтесь на мой Discord-сервер! (пока тестовый)"></a>
