--- a/MyWeb/Links/index.html
+++ b/MyWeb/Links/index.html
@@ -181,8 +181,8 @@
 <th>Одна из надёжных и открытых программ для обхода блокировок без использования VPN. Доступна на Windows и Linux (только от bol-van). Не обходит заблокированные не от ркн IP-адреса. <br>На данный момент не работает с macOS. Если у кого-то zapret с macOS работает, дайте знать.</th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\v2rayN.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/2dust/v2rayN" style="text-decoration: none; color: gray;"> v2rayN</a></th>
-<th>Клиент, который позволяет обходить блокировки сервисов с использованием VLESS-, VMess-, Trojan-, WireGuard- и Socks-конфигураций. Для работы использует тип ядер Xray или sing-box. Имеет присеты для Китая, России и Ирана. <br>Требуется ваш созданный VPN и 3x-ui/Marzban для создания собственной конфигурации.</th>
+<th class="TITLE" style="width: 160px;"><img src="img\hiddify.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/2dust/v2rayN" style="text-decoration: none; color: gray;"> Hiddify</a></th>
+<th>Лёгкий и простой в использовании VPN-клиент, доступный на Windows, Linux, macOS и на мобильные ОС. Для работы использует тип ядра sing-box. Имеет регионы для Китая, России, Ирана, Афганистана, Индонезии и для остальных стран. <br>Требуется ваш созданный VPN и 3x-ui/Marzban для создания профилей.</th>
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\amnezia.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/amnezia-vpn/amnezia-client/releases" style="text-decoration: none; color: gray;"> Amnezia VPN</a></th>
