--- a/MyWeb/Links/index.html
+++ b/MyWeb/Links/index.html
@@ -207,7 +207,7 @@
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\xub.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://xubuntu.org/" style="text-decoration: none; color: gray;"> Xubuntu</a></th>
-<th>Дистрибутив, основанный на Ubuntu. Использует в качестве по умолчанию окружение рабочего стола XFCE. Как альтернатива обычному Ubuntu, использующий неудобный по функционалу GNOME, рекомендую к использованию.</th>
+<th>Дистрибутив, основанный на Ubuntu. Использует в качестве по умолчанию окружение рабочего стола XFCE. Как альтернативу обычному Ubuntu, использующий неудобный по функционалу GNOME, рекомендую к использованию.</th>
 </tr>
 </table>
 </td>
