--- a/MyWeb/Links/index.html
+++ b/MyWeb/Links/index.html
@@ -181,7 +181,7 @@
 <th>Одна из надёжных и открытых программ для обхода блокировок без использования VPN. Доступна на Windows и Linux (только от bol-van). Не обходит заблокированные не от ркн IP-адреса. <br>На данный момент не работает с macOS. Если у кого-то zapret с macOS работает, дайте знать.</th>
 </tr>
 <tr>
-<th class="TITLE" style="width: 160px;"><img src="img\hiddify.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/2dust/v2rayN" style="text-decoration: none; color: gray;"> Hiddify</a></th>
+<th class="TITLE" style="width: 160px;"><img src="img\hiddify.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/hiddify/hiddify-app" style="text-decoration: none; color: gray;"> Hiddify</a></th>
 <th>Лёгкий и простой в использовании VPN-клиент, доступный на Windows, Linux, macOS и на мобильные ОС. Для работы использует тип ядра sing-box. Имеет регионы для Китая, России, Ирана, Афганистана, Индонезии и для остальных стран. <br>Требуется ваш созданный VPN и 3x-ui/Marzban для создания профилей.</th>
 </tr>
 <tr>
