--- a/MyWeb/Links/index.html
+++ b/MyWeb/Links/index.html
@@ -148,7 +148,7 @@
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\wrar.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.rarlab.com/download.htm" style="text-decoration: none; color: gray;"> WinRAR/RAR <br>($$$)</a></th>
-<th>Условно-бесплатный архиватор на Windows (GUI/консоль), macOS (консольная версия) и Linux (консольная версия). Если вас раздражают всплывающие окна с предложением купить программу (GUI), лучше данный архиватор не ставить на свой компьютер.</th>
+<th>Условно-бесплатный архиватор для Windows (GUI/консоль), macOS (консольная версия) и Linux (консольная версия). Если вас раздражают всплывающие окна с предложением купить программу (GUI), лучше данный архиватор не ставить на свой компьютер.</th>
 </tr>
 </table>
 <p></p>
