--- a/about.html
+++ b/about.html
@@ -53,14 +53,14 @@
 </center>
 <table border="0" width="100%" style="text-align: left;">
 <tr>
-<th width="220" style="text-align: center; font-size:11; color:gray;"><img src="img\6287a440c0d31641074598cd40d02354.jpg" width="200" alt="Аватар (на фотографии я, да)" title="Аватар (на фотографии я, да)"><p></p>Аватар <br><i>(на фотографии я, да)</i></th>
-<th>Имя: Роман <br>Возраст: 19 лет <br>ДР: 02.01.2006 <br>Пол: ламинат (мужской) <br>Хобби: коллекционирование компьютеров, антикварного ПО, играть в специфические игры на ПК/консолях, делать мемы, щитпосты, фотожабить в PhotoShop</th>
+<th width="220" style="text-align: center; font-size:11; color:gray;"><img src="img\6287a440c0d31641074598cd40d02354.jpg" width="200" alt="Аватар (это я, да)" title="Аватар (это я, да)"><p></p>Аватар <br><i>(это я, да)</i></th>
+<th>Имя: Роман <br>Возраст: 19 лет <br>ДР: 2 января <br>Пол: ламинат (мужской) <br>Хобби: делать фотожабы в PhotoShop, играть в специфичные игры на консолях шестого поколения и на ПК.</th>
 </tr>
 </table>
 <p></p>
 <table border="0" width="100%">
 <tr>
-<th>Я сайт создал для того, чтобы самому научиться работать с HTML, CSS и JS. И пока я горю желанием учиться и работать с той троицей и сервер не упадёт вечным компьютерным сном, он будет развиваться и пополняться новыми фишками. В настоящее время, сайт доступен для всех желающих <i>(наконец-то!)</i>. <br>Если у вас есть идеи для развития данного сайта, предлагайте их в группе в Telegram с постами или в странице ВК <i>(не рекомендую. Скоро заменю на другую соц. сеть)</i>. <br>Или напишите на почту: <a href="mailto:dqwdqddfcvsdvs224@gmail.com">dqwdqddfcvsdvs224@gmail.com</a>. <p></p>Сайт работает на GitHub.</th>
+<th>Доброго времени суток, анон. Добро пожаловать на мой сайт, созданный в феврале 2025 года и переделанный в июне того же года. <br>Есть предложения? Напишите на почту: <a href="mailto:dqwdqddfcvsdvs224@gmail.com">dqwdqddfcvsdvs224@gmail.com</a>. <p></p>Сайт работает на GitHub.</th>
 </tr>
 </table>
 </td>
@@ -79,8 +79,6 @@
 <img src="btn\a58.gif">
 <img src="btn\a112.gif" alt="Сайт, баннер и иконки сделаны живым человеком. Никакого ИИ, только естественный интеллект" title="Сайт, баннер и иконки сделаны живым человеком. Никакого ИИ, только естественный интеллект">
 <img src="btn\mikuapp.gif">
-<a target="_blank" rel="noopener noreferrer" href="https://discord.gg/XByQAeks4T">
-<img src="btn\discord_now.gif" alt="Присоединяйтесь на мой Discord-сервер! (пока тестовый)" title="Присоединяйтесь на мой Discord-сервер! (пока тестовый)"></a>
 </th>
 </tr>
 </table>
