--- a/about.html
+++ b/about.html
@@ -32,20 +32,6 @@
 <tr>
 </tr>
 </table>
-<td class="bottom" width="240" style="padding-right: 7px;">
-<table border="0">
-<tr>
-<th>
-<a href="https://t.me/+Oelmk65nB8oxMDRi">
-<img src="img\tg_button.gif" alt="Телегрум канал" title="Телегрум канал"></a>
-</th>
-<th>
-<a href="https://www.vk.com/fckingslave1_xerxes">
-<img src="img\vkontakte_button.gif" alt="Моя страничка вкакукте" title="Моя страничка вкакукте"></a>
-</th>
-</tr>
-</table>
-</td>
 </td>
 <td class="MAIN2" width="100%" style="padding-left: 243px;margin-right: 10px;">
 <center>
@@ -60,7 +46,7 @@
 <p></p>
 <table border="0" width="100%">
 <tr>
-<th>Доброго времени суток, анон. Добро пожаловать на мой сайт, созданный в феврале 2025 года и переделанный в июне того же года. <br>Есть предложения? Напишите на почту: <a href="mailto:dqwdqddfcvsdvs224@gmail.com">dqwdqddfcvsdvs224@gmail.com</a>. <p></p>Сайт работает на GitHub.</th>
+<th>Доброго времени суток, анон. Добро пожаловать на мой сайт, созданный в феврале 2025 года и переделанный в июне того же года. <br>Есть предложения? Напиши на почту: <a href="mailto:dqwdqddfcvsdvs224@gmail.com">dqwdqddfcvsdvs224@gmail.com</a>. <p></p>Сайт работает на GitHub.</th>
 </tr>
 </table>
 </td>
@@ -68,6 +54,10 @@
 <table border="0" width="100%">
 <tr>
 <th>
+<a href="https://t.me/+Oelmk65nB8oxMDRi">
+<img src="img\tg_button.gif" alt="Телегрум канал" title="Телегрум канал"></a>
+<a href="https://www.vk.com/fckingslave1_xerxes">
+<img src="img\vkontakte_button.gif" alt="Моя страничка вкакукте" title="Моя страничка вкакукте"></a>
 <a target="_blank" rel="noopener noreferrer" href="https://notepad-plus-plus.org/">
 <img src="btn\a355.gif" alt="Сделано в Notepad++ (рекомендую к использованию)" title="Сделано в Notepad++ (рекомендую к использованию)"></a>
 <a target="_blank" rel="noopener noreferrer" href="https://www.github.com/">
