--- a/MyWeb/Links/index.html
+++ b/MyWeb/Links/index.html
@@ -32,20 +32,6 @@
 <tr>
 </tr>
 </table>
-<td class="bottom" width="240" style="padding-right: 7px;">
-<table border="0">
-<tr>
-<th>
-<a href="https://t.me/+Oelmk65nB8oxMDRi">
-<img src="img\tg_button.gif" alt="Телегрум канал" title="Телегрум канал"></a>
-</th>
-<th>
-<a href="https://www.vk.com/fckingslave1_xerxes">
-<img src="img\vkontakte_button.gif" alt="Моя страничка вкакукте" title="Моя страничка вкакукте"></a>
-</th>
-</tr>
-</table>
-</td>
 </td>
 <td class="MAIN2" width="100%" style="padding-left: 243px;margin-right: 10px;">
 <table border="1" bgcolor="white">
@@ -182,7 +168,7 @@
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\hiddify.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/hiddify/hiddify-app" style="text-decoration: none; color: gray;"> Hiddify</a></th>
-<th>Лёгкий и простой в использовании VPN-клиент, доступный на Windows, Linux, macOS и на мобильные ОС. Для работы использует тип ядра sing-box. Имеет регионы для Китая, России, Ирана, Афганистана, Индонезии и для остальных стран. <br>Требуется ваш созданный VPN и 3x-ui/Marzban для создания профилей.</th>
+<th>Лёгкий и простой в использовании VPN-клиент, доступный на Windows, Linux, macOS и на мобильные ОС. Для работы использует тип ядра sing-box и xray. Имеет регионы для Китая, России, Ирана, Афганистана, Индонезии и для остальных стран. <br>Требуется ваш созданный VPN и 3x-ui/Marzban для создания профилей.</th>
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\amnezia.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/amnezia-vpn/amnezia-client/releases" style="text-decoration: none; color: gray;"> Amnezia VPN</a></th>
