--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 <table border="0" width="100%" style="text-align: left;">
 <tr>
 <th width="220" style="text-align: center; font-size:11; color:gray;"><img src="img\6287a440c0d31641074598cd40d02354.jpg" width="200" alt="Аватар (это я, да)" title="Аватар (это я, да)"><p></p>Аватар <br><i>(это я, да)</i></th>
-<th>Имя: Роман <br>Возраст: 19 лет <br>ДР: 2 января <br>Пол: ламинат (мужской) <br>Хобби: делать фотожабы в PhotoShop, играть в специфичные игры на консолях шестого и седьмого поколениях и на ПК.</th>
+<th>Имя: Роман <br>Возраст: 19 лет <br>ДР: 2 января <br>Пол: ламинат (мужской) <br>Хобби: делать фотожабы в PhotoShop, играть в специфичные игры на консолях разных поколений и на ПК.</th>
 </tr>
 </table>
 <p></p>
