--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 <table border="0" width="100%" style="text-align: left;">
 <tr>
 <th width="220" style="text-align: center; font-size:11; color:gray;"><img src="img\6287a440c0d31641074598cd40d02354.jpg" width="200" alt="Аватар (это я, да)" title="Аватар (это я, да)"><p></p>Аватар <br><i>(это я, да)</i></th>
-<th>Имя: Роман <br>Возраст: 19 лет <br>ДР: 2 января <br>Пол: ламинат (мужской) <br>Хобби: делать фотожабы в PhotoShop, играть в специфичные игры на консолях разных поколений и на ПК.</th>
+<th>Имя: Роман <br>Возраст: 20 ЛЕТ!!! <br>ДР: 2 января <br>Пол: ламинат (мужской) <br>Хобби: делать фотожабы, мемы в PhotoShop, играть в специфичные игры на консолях разных поколений и на ПК.</th>
 </tr>
 </table>
 <p></p>
@@ -54,18 +54,14 @@
 <table border="0" width="100%">
 <tr>
 <th>
-<a href="https://t.me/+Oelmk65nB8oxMDRi">
-<img src="img\tg_button.gif" alt="Телегрум канал" title="Телегрум канал"></a>
-<a href="https://www.vk.com/fckingslave1_xerxes">
-<img src="img\vkontakte_button.gif" alt="Моя страничка вкакукте" title="Моя страничка вкакукте"></a>
 <a target="_blank" rel="noopener noreferrer" href="https://notepad-plus-plus.org/">
-<img src="btn\a355.gif" alt="Сделано в Notepad++ (рекомендую к использованию)" title="Сделано в Notepad++ (рекомендую к использованию)"></a>
+<img src="btn\a355.gif" alt="Сделано в Notepad++" title="Сделано в Notepad++"></a>
 <a target="_blank" rel="noopener noreferrer" href="https://www.github.com/">
 <img src="btn\github_button.png" alt="Сделано на GitHub с любовью ♥" title="Сделано на GitHub с любовью ♥"></a>
 <a target="_blank" rel="noopener noreferrer" href="https://archive.org/">
 <img src="btn\webarch.gif" alt="Интернет-архив" title="Интернет-архив"></a>
 <img src="btn\wru.png">
-<img src="btn\a1.gif" alt="Мобильной версии сайта не существует" title="Мобильной версии сайта не существует">
+<img src="btn\a1.gif" alt="На данный момент, мобильной версии сайта не существует" title="На данный момент, мобильной версии сайта не существует">
 <img src="btn\a58.gif">
 <img src="btn\a112.gif" alt="Сайт, баннер и иконки сделаны живым человеком. Никакого ИИ, только естественный интеллект" title="Сайт, баннер и иконки сделаны живым человеком. Никакого ИИ, только естественный интеллект">
 <img src="btn\mikuapp.gif">
