--- a/MyWeb/Links/index.html
+++ b/MyWeb/Links/index.html
@@ -178,18 +178,18 @@
 <p></p>
 <table border="0" width="100%">
 <tr>
-<th class="TITLE">Загрузка видео и аудио с YouTube. И не только с него...</th>
+<th class="TITLE">Скачивание видео и аудио с YouTube. И не только с него...</th>
 </tr>
 </table>
 <p></p>
 <table border="1" width="100%">
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\yt-dlp.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/yt-dlp/yt-dlp" style="text-decoration: none; color: gray;"> yt-dlp (stable)</a><p></p><img src="img\yt-dlp.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://github.com/yt-dlp/yt-dlp-nightly-builds" style="text-decoration: none; color: gray;"> yt-dlp (nightly)</a></th>
-<th>Пожалуй, это хороший загрузчик видео/аудио, который умеет без проблем скачивать с YouTube, даже заблокированные в России правообладателем (см. <a target="_blank" rel="noopener noreferrer" href="https://github.com/yt-dlp/yt-dlp?tab=readme-ov-file#usage-and-options" style="text-decoration: none;">USAGE AND OPTIONS</a>). Имеет поддержку тысячи сайтов, в том числе и известных (SoundCloud, Twitter, Instagram, TikTok, Twitch, ВКонтакте и т.д.) <br>Для некоторых форматов может потребоваться библиотека <img src="img\ffmpeg.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.ffmpeg.org/download.html" style="text-decoration: none; color: gray;"> FFmpeg</a>, что крайне рекомендуется.</th>
+<th>Пожалуй, это хорошая программа, который умеет без проблем скачивать видео/аудио с YouTube, даже заблокированные в России правообладателем (см. <a target="_blank" rel="noopener noreferrer" href="https://github.com/yt-dlp/yt-dlp?tab=readme-ov-file#usage-and-options" style="text-decoration: none;">USAGE AND OPTIONS</a>). Имеет поддержку тысячи сайтов, в том числе и известных (SoundCloud, Twitter, Instagram, TikTok, Twitch, ВКонтакте и т.д.) <br>Для некоторых форматов может потребоваться библиотека <img src="img\ffmpeg.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://www.ffmpeg.org/download.html" style="text-decoration: none; color: gray;"> FFmpeg</a>, что крайне рекомендуется.</th>
 </tr>
 <tr>
 <th class="TITLE" style="width: 160px;"><img src="img\cobalt.png"; width="16" height="16"><a target="_blank" rel="noopener noreferrer" href="https://cobalt.meowing.de" style="text-decoration: none; color: gray;"> Cobalt (инстанция сообщества)</a></th>
-<th>Единственный простой веб-загрузчик аудио/видео, не имеющий рекламы и не требующий подписки. Поддерживает меньше сайтов, но с основных загрузить то, что нужно, не проблема. <br>Почему здесь не оригинальный <a target="_blank" rel="noopener noreferrer" href="https://cobalt.tools" style="text-decoration: none; color: gray;">Cobalt</a>? С оригинального временно убрали возможность загрузки видео/аудио с YouTube из-за ограничений с их стороны.</th>
+<th>Единственный простой веб-загрузчик аудио/видео, не имеющий рекламы и не требующий подписки. Поддерживает меньше сайтов, но с основных скачать то, что нужно, не проблема. <br>Почему здесь не оригинальный <a target="_blank" rel="noopener noreferrer" href="https://cobalt.tools" style="text-decoration: none; color: gray;">Cobalt</a>? С оригинального временно убрали возможность загрузки видео/аудио с YouTube из-за ограничений с их стороны.</th>
 </tr>
 </table>
 </td>
