--- a/about.html
+++ b/about.html
@@ -40,13 +40,13 @@
 <table border="0" width="100%" style="text-align: left;">
 <tr>
 <th width="220" style="text-align: center; font-size:11; color:gray;"><img src="img\6287a440c0d31641074598cd40d02354.jpg" width="200" alt="Аватар (это я, да)" title="Аватар (это я, да)"><p></p>Аватар <br><i>(это я, да)</i></th>
-<th>Имя: Роман <br>Возраст: 20 ЛЕТ!!! <br>ДР: 2 января <br>Пол: ламинат (мужской) <br>Хобби: делать фотожабы, мемы в PhotoShop, играть в специфичные игры на консолях разных поколений и на ПК.</th>
+<th>Имя: Роман <br>Возраст: 20 лет <br>ДР: 2 января <br>Пол: ламинат (мужской) <br>Хобби: делать фотожабы, мемы в PhotoShop, играть в специфичные игры на консолях разных поколений и на ПК.</th>
 </tr>
 </table>
 <p></p>
 <table border="0" width="100%">
 <tr>
-<th>Доброго времени суток, анон. Добро пожаловать на мой сайт, созданный в феврале 2025 года и переделанный в июне того же года. <br>Есть предложения? Напиши на почту: <a href="mailto:dqwdqddfcvsdvs224@gmail.com">dqwdqddfcvsdvs224@gmail.com</a>. <p></p>Сайт работает на GitHub.</th>
+<th>Доброго времени суток, анон. Добро пожаловать на мой сайт, созданный в феврале 2025 года и переделанный в июне того же года. <br>Есть предложения, пожелания? Напиши на почту: <a href="mailto:dqwdqddfcvsdvs224@gmail.com">dqwdqddfcvsdvs224@gmail.com</a>. <p></p>Сайт работает на GitHub.</th>
 </tr>
 </table>
 </td>
